Adiccion de las imagenes y el boceto previsto para el desarollo del HTML

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina web</title>
+    <!-- estilos -->
+    <style type="text/css">
+
+    </style>
 </head>
 
 <body>
-
+    <header>
+        <nav class="menu">
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div id="services"></div>
+    <div id="news"></div>
+    <div id="team"></div>
+    <footer></footer>
 </body>
 
 </html>
