--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,6 @@
         
         header {
             position: fixed;
-            background-image: url(images/header.jpg);
-            background-size: 100% 100%;
             width: 100%;
             height: 50px;
         }
@@ -41,6 +39,11 @@
             text-decoration: none;
             color: black;
         }
+        
+        .menu img {
+            width: 100%;
+            height: 50px;
+        }
     </style>
 </head>
 
@@ -52,6 +55,7 @@
                 <li><a href="#">Segunda</a></li>
                 <li><a href="#">Tercera</a></li>
             </ul>
+            <img src="./images/header.jpg" alt="">
         </nav>
     </header>
     <div id="services"></div>
