--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina web</title>
-    <!-- estilos -->
-    <style type="text/css">
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -30,7 +27,23 @@
     <div id="services"></div>
     <div id="news"></div>
     <div id="team"></div>
-    <footer></footer>
+    <footer>
+        <div>
+            <p>Desarrollo de la primera pagina web del reto-semana #1, donde aplicamos conocimientos en css</p>
+            <a href="https://github.com/caobandoc/semana-1-124"><img src="./images/GitHub.png" alt=""></a>
+        </div>
+        <div class="autores">
+            <ul>
+                <li>
+                    Carlos Andres Obando Casiano
+                </li>
+                <br>
+                <li>
+                    Jorge Andrés Mora Acosta
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
