Arreglo de las opciones del header

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Segunda</a></li>
-                <li><a href="#">Tercera</a></li>
+                <li><a href="#services">Servicios</a></li>
+                <li><a href="#news">Noticias</a></li>
+                <li><a href="#team">Equipo</a></li>
             </ul>
             <img src="./images/header.jpg" alt="">
         </nav>
