--- a/src/index.html
+++ b/src/index.html
@@ -23,29 +23,31 @@
     <div id="services"></div>
     <div id="news">
         <div class="fila">
-            <div class="colm">
-                <img src="./news/ps5.jpg" alt="">
+            <div class="colm"><img src="./news/ps5.jpg" alt="">
                 <h3>Sony dice que la PlayStation 5 ya es el mayor lanzamiento de su historia y promete más stock para este año</h3>
                 <p>La PlayStation 5 llegó al mercado hace apenas unas semanas y ya se convirtió en el mayor lanzamiento en la historia de Sony. La empresa publicó en su cuenta de Twitter un mensaje de agradecimiento por el hito y dijo que tratará de satisfacer
-                    la alta demanda de su consola enviando más unidades antes de fin de año.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/sony-dice-que-la-playstation-5-ya-es-el-mayor-lanzamiento-de-su-historia-y-promete-mas-stock-para-este-ano/">Aqui</a></p>
+                    la alta demanda de su consola enviando más unidades antes de fin de año.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/sony-dice-que-la-playstation-5-ya-es-el-mayor-lanzamiento-de-su-historia-y-promete-mas-stock-para-este-ano/">Aqui</a>
+                </p>
             </div>
-            <div class="colm">
-                <img src="./news/CupHead.jpg" alt="">
+            <div class="colm"><img src="./news/CupHead.jpg" alt="">
                 <h3>The Delicious Last Course, expansión de Cuphead, se pospone nuevamente y llegará en 2021</h3>
                 <p>El desarrollador Studio MDHR anunció este miércoles que Cuphead: The Delicious Last Course se retrasó nuevamente. El DLC estaba planeado originalmente para 2019, pero se retrasó hasta 2020. Ahora, la última expansión del juego está programada
-                    para su lanzamiento el próximo año.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/the-delicious-last-course-expansion-de-cuphead-se-pospone-nuevamente-y-llegara-en-2021/">Aqui</a></p>
+                    para su lanzamiento el próximo año.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/the-delicious-last-course-expansion-de-cuphead-se-pospone-nuevamente-y-llegara-en-2021/">Aqui</a>
+                </p>
             </div>
-            <div class="colm">
-                <img src="./news/RTX.jpg" alt="">
+        </div>
+        <div class="fila">
+            <div class="colm"><img src="./news/RTX.jpg" alt="">
                 <h3>NVIDIA habría ganado $175 millones de dólares en ventas de GeForce RTX 30 a mineros de criptomonedas</h3>
                 <p>El faltante de stock de la serie GeForce RTX 30 podría tener otro actor principal, y es que los informes de los analistas financieros sugieren que NVIDIA le habría vendido gran parte de sus nuevas GPUs Ampere a los mineros de criptomonedas.
-                    Esto podría indicar por qué hay una escasez inmensa que durará hasta 2021.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/nvidia-habria-ganado-175-millones-de-dolares-en-ventas-de-geforce-rtx-30-a-mineros-de-criptomonedas/">Aqui</a></p>
+                    Esto podría indicar por qué hay una escasez inmensa que durará hasta 2021.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/nvidia-habria-ganado-175-millones-de-dolares-en-ventas-de-geforce-rtx-30-a-mineros-de-criptomonedas/">Aqui</a>
+                </p>
             </div>
-            <div class="colm">
-                <img src="./news/TSMC.jpg" alt="">
+            <div class="colm"><img src="./news/TSMC.jpg" alt="">
                 <h3>TSMC confirma su proceso de 3nm para 2022, triplicando la cantidad de transistores</h3>
                 <p>TSMC, la fábrica de semiconductores líder a nivel mundial, confirmó que comenzará la producción en masa de chips de 3nm en la segunda mitad de 2022. Según el presidente de la empresa taiwanesa, Liu Deyin, el número de empleados en el Parque
-                    Científico de Tainan alcanzará los 20.000 cuando llegue el momento.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/tsmc-confirma-su-proceso-de-3nm-para-2022-triplicando-la-cantidad-de-transistores/">Aqui</a></p>
+                    Científico de Tainan alcanzará los 20.000 cuando llegue el momento.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/tsmc-confirma-su-proceso-de-3nm-para-2022-triplicando-la-cantidad-de-transistores/">Aqui</a>
+                </p>
             </div>
         </div>
     </div>
