Agregar sección team con imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,28 @@
             </div>
         </div>
     </div>
-    <div id="team"></div>
+    <div id="team">
+        <div>
+            <img src="./images/caoc.jpg" alt="">
+            <h4>Carlos Obando</h4>
+            <ul>
+                <li>Edad: 21</li>
+                <li>Institucion Educativa: Universidad Tecnologica de pereira</li>
+                <li>Pasatiempo: Esports</li>
+            </ul>
+        </div>
+        <div>
+            <img src="./images/estilo.jpg" alt="">
+            <h4>Andrés Mora</h4>
+            <ul>
+                
+                <li>Edad: 37</li>
+                <li>Institución Educativa: Universidad Técnologica e Pereira</li>
+                <li>Pasatiempo: Futbol</li>
+                
+            </ul>
+        </div>
+    </div>
     <footer>
         <div>
             <p>Desarrollo de la primera pagina web del reto-semana #1, donde aplicamos conocimientos en css</p>
