Creamos los servicios

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,25 @@
             <img src="./images/header.jpg" alt="">
         </nav>
     </header>
-    <div id="services"></div>
+    <div id="services">
+        <div>
+            <img src="./images/services1.png" alt="">
+            <h3>consolas</h3>
+            <p>Descubre el increíble Mundo Gamer que tenemos para ti  este Cyber Monday. Encuentra tu Consola favorita y juega con tu PS4 o tu Nintendo Switch </p>
+            
+        </div>
+        <div>
+            <img src="./images/services2.jpg" alt="" class="imgb">
+            <h3>juegos</h3>
+            <p> los clásicos como Fifa, Mario Kart y mucho más.</p>
+        </div>
+        <div>
+            <img src="./images/services3.jpg" alt="" class="imgb">
+            <h3>accesorios</h3>
+            <p>Lleva tu experiencia a otro nivel con los Accesorios para Videojuegos y mantente atent@ a la preventa del PS5 a un solo click.</p>
+        </div>
+
+    </div>
     <div id="news">
         <div class="fila">
             <div class="colm"><img src="./news/ps5.jpg" alt="">
