--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vuejs desde cero</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -57,8 +57,7 @@
             <div class="colm"><img src="./news/ps5.jpg" alt="">
                 <h3>Sony dice que la PlayStation 5 ya es el mayor lanzamiento de su historia y promete más stock para este año</h3>
                 <p>La PlayStation 5 llegó al mercado hace apenas unas semanas y ya se convirtió en el mayor lanzamiento en la historia de Sony. La empresa publicó en su cuenta de Twitter un mensaje de agradecimiento por el hito y dijo que tratará de satisfacer
-                    la alta demanda de su consola enviando más unidades antes de fin de año.<br><br> Noticia completa:
-                    <a href="https://www.hd-tecnologia.com/sony-dice-que-la-playstation-5-ya-es-el-mayor-lanzamiento-de-su-historia-y-promete-mas-stock-para-este-ano/">Aqui</a>
+                    la alta demanda de su consola enviando más unidades antes de fin de año.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/sony-dice-que-la-playstation-5-ya-es-el-mayor-lanzamiento-de-su-historia-y-promete-mas-stock-para-este-ano/">Aqui</a>
                 </p>
             </div>
             <div class="colm"><img src="./news/CupHead.jpg" alt="">
@@ -70,11 +69,9 @@
         </div>
         <div class="fila">
             <div class="colm"><img src="./news/RTX.jpg" alt="">
-                <h3>NVIDIA habría ganado $175 millones de dólares en ventas de GeForce RTX 30 a mineros de criptomonedas
-                </h3>
+                <h3>NVIDIA habría ganado $175 millones de dólares en ventas de GeForce RTX 30 a mineros de criptomonedas</h3>
                 <p>El faltante de stock de la serie GeForce RTX 30 podría tener otro actor principal, y es que los informes de los analistas financieros sugieren que NVIDIA le habría vendido gran parte de sus nuevas GPUs Ampere a los mineros de criptomonedas.
-                    Esto podría indicar por qué hay una escasez inmensa que durará hasta 2021.<br><br> Noticia completa:
-                    <a href="https://www.hd-tecnologia.com/nvidia-habria-ganado-175-millones-de-dolares-en-ventas-de-geforce-rtx-30-a-mineros-de-criptomonedas/">Aqui</a>
+                    Esto podría indicar por qué hay una escasez inmensa que durará hasta 2021.<br><br> Noticia completa: <a href="https://www.hd-tecnologia.com/nvidia-habria-ganado-175-millones-de-dolares-en-ventas-de-geforce-rtx-30-a-mineros-de-criptomonedas/">Aqui</a>
                 </p>
             </div>
             <div class="colm"><img src="./news/TSMC.jpg" alt="">
