--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vuejs desde cero</title>
+    <title>Reto ciclo 3</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav class="menu">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#services">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#news">Noticias</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#team">Equipo</a>
-                </li>
-            </ul>
-            <img src="./images/header.jpg" alt="">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">
+                <img src="./images/header.jpg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> Bootstrap
+            </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Inicio</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#services">Servicios</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#news">Noticias</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#team">Equipo</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <div id="services" class="alert alert-primary">
