Agregando bootstrap al footer

--- a/src/index.html
+++ b/src/index.html
@@ -109,20 +109,44 @@
         </div>
     </div>
     <footer class="alert alert-warning">
-        <div>
-            <p>Desarrollo de la primera pagina web del reto-semana #1, donde aplicamos conocimientos en css</p>
-            <a href="https://github.com/caobandoc/semana-1-124"><img src="./images/GitHub.png" alt=""></a>
-        </div>
-        <div class="autores">
-            <ul>
-                <li>
-                    Carlos Andres Obando Casiano
-                </li>
-                <br>
-                <li>
-                    Jorge Andrés Mora Acosta
-                </li>
-            </ul>
+        <div class="row row-cols-2">
+            <div class="col">
+                <a href="https://github.com/caobandoc/semana-1-124"><img class="rounded float-right" src="./images/GitHub.png" alt="" width="300"></a>
+                <p>Desarrollo de la primera pagina web del reto-semana #2 donde aplicamos el framework bootstrap, Vue.js, y API para JavaScript</p>
+                <ul>
+                    <li>
+                        Carlos Andres Obando Casiano
+                    </li>
+                    <br>
+                    <li>
+                        Jorge Andrés Mora Acosta
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <form>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col">
+                                <label for="exampleFormControlInput1">Nombres:</label>
+                                <input type="text" class="form-control" placeholder="Nombres">
+                            </div>
+                            <div class="col">
+                                <label for="exampleFormControlInput1">Apellidos:</label>
+                                <input type="text" class="form-control" placeholder="Apellidos">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Correo electronico:</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Descripcion:</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
